--- a/index.Rmd
+++ b/index.Rmd
@@ -45,9 +45,11 @@ athlete_all <- athlete_events %>%
 
 #data visualization
 ggplot(data = athlete_all, mapping = aes(x = Year, y = avg_BMI, color = Sport)) +
-  geom_point() +
-  geom_smooth(se = FALSE, span = .5) +
-  facet_wrap(~Sex)
+  geom_line() +
+  #geom_smooth(se = FALSE, span = .5) +
+  facet_wrap(~Sex) +
+  labs(title = "Average Olympian BMI Over Time: Swimming, Gymnastics, and Track & Field", y = "Average BMI") +
+  scale_color_discrete(name = "Olympic Sport", labels = c("Track & Field", "Gymnastics", "Swimming"))
 
 ```
 
