--- a/more_info.Rmd
+++ b/more_info.Rmd
@@ -25,13 +25,25 @@ Write a second `more_info.html` page going more in-depth for people who want mor
 1. Between 2-3 more visualizations.
 1. No more than 500 words of text
 
+```{r, message=FALSE, warning=FALSE, echo=FALSE}
+# Set R chunk default options:
+# -do not output all R messages in html report
+# -do not output all R warnings in html report
+# -set default figure widths and heights
+knitr::opts_chunk$set(
+  message = FALSE, warning = FALSE, fig.width = 16/2, fig.height = 9/2
+)
+```
+
+
 ```{r, echo = FALSE}
 #load packages
 library(tidyverse)
 
 #load datasets
 
-athlete_events <- read_csv("athlete_events.csv")
+athlete_events <- read_csv("athlete_events.csv")  %>% 
+  mutate(Sex = ifelse(Sex == "F", "Women", "Men"))
 noc_regions <- read_csv("noc_regions.csv")
 
 #data wrangling
@@ -47,9 +59,198 @@ athlete_all <- athlete_events %>%
 
 #average age visualization
 
-ggplot(data = athlete_all, mapping = aes(x = Year, y = avg_age, color = Sex)) +
+ggplot(data = athlete_all, 
+       mapping = aes(x = Year, 
+                     y = avg_age, 
+                     color = Sex)) +
   geom_point() +
   geom_smooth(se = FALSE, span = 0.75) +
-  facet_wrap(~Sport)
+  facet_wrap(~Sport) +
+  labs(y = "Mean Athlete Age", 
+       title = "Olympian Age Over the Years:\n \u2192 Swimming, Gymnastics, Track & Field") +
+  theme(legend.title = element_blank())
 
 ```
+
+```{r, echo = FALSE}
+#comparing runners and swimmers BMI accross events
+
+#400 or less
+track_sprint_events <- list(
+  "Athletics Men's 100 metres", 
+  "Athletics Women's 100 metres", 
+  "Athletics Men's 200 metres", 
+  "Athletics Women's 200 metres", 
+  "Athletics Men's 400 metres", 
+  "Athletics Women's 400 metres", 
+  "Athletics Men's 4 x 100 metres Relay",
+  "Athletics Women's 4 x 100 metres Relay",
+  "Athletics Men's 4 x 400 metres Relay",
+  "Athletics Women's 4 x 400 metres Relay"
+  )
+
+#steeple excluded
+track_hurdle_events <- list(
+  "Athletics Men's 110 metres Hurdles", 
+  "Athletics Women's 100 metres Hurdles",
+  "Athletics Men's 400 metres Hurdles", 
+  "Athletics Women's 400 metres Hurdles"
+)
+
+#800 and 1500
+track_middle_events <- list(
+  "Athletics Men's 1,500 metres",
+  "Athletics Women's 1,500 metres",
+  "Athletics Men's 800 metres",
+  "Athletics Women's 800 metres"
+)
+
+#3k and above, steeple included
+track_distance_events <- list(
+  "Athletics Women's 3,000 metres",
+  "Athletics Men's 5,000 metres",
+  "Athletics Women's 5,000 metres",
+  "Athletics Men's 3,000 metres Steeplechase",
+  "Athletics Women's 3,000 metres Steeplechase",
+  "Athletics Men's 10,000 metres",
+  "Athletics Women's 10,000 metres"
+  )
+
+track_marathon_events <- list(
+  "Athletics Men's Marathon",
+  "Athletics Women's Marathon"
+)
+
+track_walk_events <- list(
+  "Athletics Women's 10 kilometres Walk",
+  "Athletics Men's 20 kilometres Walk",
+  "Athletics Women's 20 kilometres Walk",
+  "Athletics Men's 50 kilometres Walk",
+  "Athletics Women's 50 kilometres Walk"
+)
+
+
+swim_free_sprint_events <- list(
+  "Swimming Women's 50 metres Freestyle",
+  "Swimming Women's 400 metres Freestyle",
+  "Swimming Women's 4 x 200 metres Freestyle Relay",
+  "Swimming Women's 4 x 100 metres Freestyle Relay",
+  "Swimming Women's 200 metres Freestyle",
+  "Swimming Women's 100 metres Freestyle",
+  "Swimming Men's 50 metres Freestyle",
+  "Swimming Men's 400 metres Freestyle",
+  "Swimming Men's 4 x 200 metres Freestyle Relay",
+  "Swimming Men's 4 x 100 metres Freestyle Relay",
+  "Swimming Men's 200 metres Freestyle",
+  "Swimming Men's 100 metres Freestyle"
+)
+
+swim_free_distance_events <- list(
+  "Swimming Men's 1,500 metres Freestyle",
+  "Swimming Women's 800 metres Freestyle",
+  "Swimming Women's 1,500 metres Freestyle",
+  "Swimming Men's 800 metres Freestyle",
+  "Swimming Men's 10 kilometres Open Water",
+  "Swimming Women's 10 kilometres Open Water"
+)
+
+swim_butterfly_events <- list(
+  "Swimming Women's 200 metres Butterfly",
+  "Swimming Women's 100 metres Butterfly",
+  "Swimming Men's 200 metres Butterfly",
+  "Swimming Men's 100 metres Butterfly"
+)
+
+swim_breast_events <- list(
+  "Swimming Women's 200 metres Breaststroke",
+  "Swimming Women's 100 metres Breaststroke",
+  "Swimming Men's 200 metres Breaststroke",
+  "Swimming Men's 100 metres Breaststroke"
+)
+
+swim_back_events <- list(
+  "Swimming Women's 200 metres Backstroke",
+  "Swimming Women's 100 metres Backstroke",
+  "Swimming Men's 200 metres Backstroke",
+  "Swimming Men's 100 metres Backstroke"
+)
+
+swim_IM_events <- list(
+  "Swimming Women's 400 metres Individual Medley",
+  "Swimming Women's 4 x 100 metres Medley Relay",
+  "Swimming Women's 200 metres Individual Medley",
+  "Swimming Men's 400 metres Individual Medley",
+  "Swimming Men's 4 x 100 metres Medley Relay",
+  "Swimming Men's 200 metres Individual Medley"
+)
+
+```
+
+```{r, echo = FALSE}
+track_event_order <- c("Sprint",
+                 "Hurdles",
+                 "Walk",
+                 "Middle",
+                 "Distance",
+                 "Marathon")
+
+swim_event_order <- c("IM",
+                      "Breast",
+                      "Sprint",
+                      "Butterfly",
+                      "Back",
+                      "Distance")
+
+```
+
+```{r, echo = FALSE}
+runner_BMI <- athlete_events %>% 
+  filter(Sport == "Athletics", Year > 1990) %>% 
+  mutate(BMI = Weight/((Height/100)*(Height/100))) %>% 
+  #filter(grepl("0", Event)) %>% 
+  mutate(event_catagory = 
+           ifelse(Event %in% track_sprint_events, "Sprint", 
+                  ifelse(Event %in% track_distance_events, "Distance", 
+                         ifelse(Event %in% track_middle_events, "Middle",
+                                ifelse(Event %in% track_hurdle_events, "Hurdles", 
+                                       ifelse(Event %in% track_walk_events, "Walk", 
+                                              ifelse(Event %in% track_marathon_events, "Marathon",
+                                                     "Other"))))))) %>% 
+  filter(event_catagory != "Other") %>% #get rid of field events
+  mutate(event_catagory = factor(event_catagory, levels = track_event_order))
+
+swimmer_BMI <- athlete_events %>% 
+  filter(Sport == "Swimming", Year > 1990) %>% 
+  mutate(BMI = Weight/((Height/100)*(Height/100))) %>% 
+  mutate(event_catagory = 
+           ifelse(Event %in% swim_free_distance_events, "Distance",
+                  ifelse(Event %in% swim_free_sprint_events, "Sprint",
+                         ifelse(Event %in% swim_butterfly_events, "Butterfly",
+                                ifelse(Event %in% swim_breast_events,"Breast",
+                                       ifelse(Event %in% swim_back_events, "Back",
+                                              ifelse(Event %in% swim_IM_events, "IM", "Other"))))))) %>% 
+  mutate(event_catagory = factor(event_catagory, levels = swim_event_order))
+```
+
+```{r, echo = FALSE}
+ggplot(data = runner_BMI, mapping = aes(x = factor(event_catagory), y = BMI, fill = event_catagory)) +
+  facet_wrap(~Sex) +
+  geom_boxplot() +
+  labs(x = "Type of Event",
+       y = "Avergae Athlete BMI",
+       title = "Olympian's BMI by Event: \n \u2192 Runners")+
+  ylim(14, 35) +
+  scale_fill_brewer(palette = "Set3") +
+  theme(legend.position = "none") 
+
+ggplot(data = swimmer_BMI, mapping = aes(x = factor(event_catagory), y = BMI, fill = event_catagory)) +
+  facet_wrap(~Sex) +
+  geom_boxplot() +
+  labs(x = "Type of Event",
+       y = "Avergae Athlete BMI",
+       title = "Olympian's BMI by Event: \n \u2192 Swimmers") + 
+  ylim(14, 35)  +
+  scale_fill_brewer(palette = "Set3") +
+  theme(legend.position = "none")
+```
+
